# auto_eda

./: .gitignore  CLAUDE.md  LICENSE  README.md  analyzer.py  gemini_client.py  main.py  project.md  pyproject.toml
UI/: README.md  SKILL.md  colors_and_type.css
UI/preview/: brand-voice.html  brand-wordmark.html  colors-badges.html  colors-brand.html  colors-neutrals.html  components-buttons.html  components-dropzone.html  components-overview-cards.html  components-steps.html  components-table.html  preview.css  radii.html  shadows.html  spacing-scale.html  type-family.html  type-mono.html  type-scale.html
UI/ui_kits/web/: App.jsx  Dropzone.jsx  Header.jsx  Icons.jsx  README.md  Report.jsx  StepIndicator.jsx  index.html  sampleReport.jsx  styles.css
agent/: loop.py  prompts.py  session.py  tools.py
static/: app.js  index.html  style.css
static/js/: api.js  app.js  icons.js  store.js
static/js/components/: analyzing.js  chat.js  header.js  report.js  upload.js
