[project]
name = "auto-eda"
version = "0.1.0"
description = "CSV 업로드 시 Claude API가 자동으로 EDA를 수행하고 한국어 인사이트 리포트를 생성하는 웹앱"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]
